--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/react-calendar": "^3.9.0",
     "date-fns": "^4.1.0",
+    "firebase": "^12.7.0",
     "react": "^18.3.1",
     "react-calendar": "^6.0.0",
     "react-dom": "^18.3.1",
